--- a/_posts/2019-09-26-aws-dev-day-2019.md
+++ b/_posts/2019-09-26-aws-dev-day-2019.md
@@ -5,13 +5,16 @@ categories: development conference
 ---
 
 
-[2019 AWS Dev Day](https://aws.amazon.com/ko/events/devday/seoul/)에 참가했다. 참가한 주 목적은 사내에 SageMaker를 도입하고자 정보를 얻기 위함이다. :smirk:
+
+![KakaoTalk_Photo_2019-09-26-23-44-16](https://user-images.githubusercontent.com/15315794/65700696-08a44400-e0bb-11e9-824a-ba2b23f0477c.jpeg)
+
+[2019 AWS Dev Day](https://aws.amazon.com/ko/events/devday/seoul/)에 참가했습니다. 참가한 주 목적은 사내에 SageMaker를 도입하고자 정보를 얻기 위함입니다. :smirk:
 
 
 
 ## 행사 일정
 
-오전에는 전반적인 aws 서비스 소개를 듣고, 오후에는 본인이 원하는 세션을 찾아 듣는 방식이었다.
+오전에는 전반적인 aws 서비스 소개를 듣고, 오후에는 본인이 원하는 세션을 찾아 듣는 방식입니다.
 
 | 시간          | 내용                   |
 | ------------- | ---------------------- |
@@ -20,13 +23,11 @@ categories: development conference
 | 11:30 - 12:45 | 점심 시간              |
 | 12:45 - 17:30 | 강연 및 실습 워크샵    |
 
+오후 시간에는 총 3세션의 강연(인공지능/기계 학습, 앱 현대화, 이머징 테크)과 4세션의 실습 워크샵(GluonCV, IoT+SageMaker, EKS, Amplify+AI)이 준비되어있었고, 저는 **인공지능/기계 학습** 세션을 수강했습니다.
 
+사실 **Amplify와 AI 서비스를 활용한 서버리스 기반 소셜 안드로이드 앱 만들기** 실습도 해보고싶었던터라 조금 아쉬움이 남긴 했습니다. 😢
 
 ### 인공지능/기계 학습 강연 일정
-
-오후 시간에는 총 3세션의 강연(인공지능/기계 학습, 앱 현대화, 이머징 테크)과 4세션의 실습 워크샵(GluonCV, IoT+SageMaker, EKS, Amplify+AI)이 준비되어있었고, 나는 **인공지능/기계 학습** 세션을 수강했다.
-
-사실 **Amplify와 AI 서비스를 활용한 서버리스 기반 소셜 안드로이드 앱 만들기** 실습도 해보고싶었던터라 조금 아쉬움이 남는다. :cry:
 
 | 시간           | 내용                                                         |
 | -------------- | ------------------------------------------------------------ |
@@ -36,6 +37,16 @@ categories: development conference
 | 16:30  - 17:30 | **Intel on AWS, AI/ML Service 성능 향상을 위한 협력 모델**<br/>*서지혜 솔루션즈 아키텍트, AWS<br/>김종학 과장, Intel*<br/><br/>클라우드는 데이터 수집, 저장, 맞춤형 AI/ML 모델 생성 등 대규모 AI워크로드 운영을 비용 효율적이며 쉽게 만들어 줄 수 있습니다. 이 세션에서는 AI 워크로드를 간단하고 빠르게 처리하기 위해 AWS와 Intel이 어떻게 협력하고 있는지에 관해 설명합니다. 첫 번째로 AWS C5 인스턴스에 적용된 고성능 Intel Xeon® Scalable processors 기술에 대해 설명합니다. 그리고 강화 학습으로 생성된 모델을 가지고 자율 주행하는 1/18 스케일의 자동차DeepRacer 에 적용된 Intel의 강화 학습 라이브러리 및 Inference engine (Openvino)에 대해서도 알아봅니다. 이 밖에도 AWS AI/ML Marketplace에 제공 되고 있는 Intel의 AWS AI/ML library 및 모델에 대해 알아봅니다. |
 
 
+
+## Register
+
+친절하신 aws 직원분들이 등록을 도와주십니다. 회사명이 이렇게 대문짝하게 찍히는줄 모르고 적어냈는데 bold 적용돼서 출력되는 덕분에, 저를 IT부문에서 오셨다고 착각하시곤 말을 거시던 분들이 계셨습니다. 아니라고하기가 민망해서 대충 대화를하긴 했는데 전 일개 OY 정보전략팀이라 아무것도 모릅니다..
+
+![KakaoTalk_Photo_2019-09-26-23-44-48](https://user-images.githubusercontent.com/15315794/65700658-faeebe80-e0ba-11e9-9775-d762388c4d0d.jpeg)
+
+
+
+*이하 내용은 편의를 위해 반말로..*
 
 
 
@@ -272,4 +283,16 @@ AI Services - ML Services - ML Frameworks + Infrastructure
 - 고급 알고리즘 사용 가능
 - High-Performance 네트워크 (RDMA, GPUDirect) 지원
 - ML 엔지니어와 인프라를 분리
+
+
+
+## 마치며
+
+사실 제가 들은 세션은 전반적으로 aws 서비스 홍보로 시작해서 홍보로 끝나는 느낌뿐이어서.. 살짝 아쉬웠습니다. 우수사례 경험 공유가 중간중간 있긴 했지만, 그 외 세션들은 결국 홈페이지에 나와있는 내용을 좀 더 자세히 설명한 수준뿐이었거든요. :cry: 
+
+그래도 매년 이렇게 좋은 행사 열어주는 Amazon에게 무궁한 감사를.. 표합니다. 끊임없이 제공되던 무한 맥주가 최고였어요. (:heart:)
+
+![KakaoTalk_Photo_2019-09-26-23-44-54](https://user-images.githubusercontent.com/15315794/65700639-f2968380-e0ba-11e9-9737-0caa1a962df0.jpeg)
+
+
 
