--- a/_posts/2019-09-26-aws-dev-day-2019.md
+++ b/_posts/2019-09-26-aws-dev-day-2019.md
@@ -42,15 +42,17 @@ categories: development conference
 
 ## Register
 
-친절하신 aws 직원분들이 등록을 도와주십니다. 회사명이 이렇게 대문짝하게 찍히는줄 모르고 적어냈는데 bold 적용돼서 출력되는 덕분에, 저를 IT부문에서 오셨다고 착각하시곤 말을 거시던 분들이 계셨습니다. 아니라고하기가 민망해서 대충 대화를하긴 했는데 전 일개 OY 정보전략팀이라 아무것도 모릅니다..
+친절하신 aws 직원분들이 등록을 도와주십니다. 회사명이 이렇게 대문짝하게 찍히는줄 모르고 적어냈는데 bold 적용돼서 출력되는 덕분에, 저를 IT부문에서 왔다고 착각하시곤 말을 거시던 분들이 계셨습니다. 아니라고하기가 민망해서 대충 대화를 하긴 했는데 전 일개 OY 정보전략팀이라 아무것도 모릅니다..
 
 ![KakaoTalk_Photo_2019-09-26-23-44-48](https://user-images.githubusercontent.com/15315794/65700658-faeebe80-e0ba-11e9-9775-d762388c4d0d.jpeg)
 
+<br/>
 
+<br/>
 
 *이하 내용은 편의를 위해 반말로..*
 
-<br/><br/>
+<br/>
 
 ## 기조 연설
 
@@ -260,8 +262,6 @@ AI Services - ML Services - ML Frameworks + Infrastructure
 - 대규모 ML 모델 트레이닝 및 대규모 데이터 처리: 32GB GPU 메모리를 장착한 최신 NVIDIA V100 GPU
 - 데이터 전처리 최적화에 적합: 96 vCPUs sing AWS Custom Skylake CPUs and 768GB of System Memory
 
-<br/>
-
 ### AWS FSx for Lustre
 
 - 머신 러닝, HPC, 동영상 처리, 금융 모델링 등을 위한 고성능 파일 시스템
@@ -270,8 +270,6 @@ AI Services - ML Services - ML Frameworks + Infrastructure
 - POSIX와 호환되므로, 특별히 추가 변경 없이 기존 Linux 기반 애플리케이션 사용 가능
 - 사용한 리소스에 대해서만 비용 지불 (최소약정/선수금 없음)
 - 클라이언트 모듈 커널 OS 사용 가능
-
-<br/>
 
 ### Horovod
 
